--- a/src/styles/images.css
+++ b/src/styles/images.css
@@ -2,7 +2,7 @@
 /* Add your profile image here */
 /*.Photo{
     background-image:
-}*/
+}
 /* Projects Photo */
 #programming{
     background-image: url('https://i.ibb.co/tLRsyQg/2.jpg');
