--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -2,6 +2,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Anonymous+Pro:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro');
 :root {
-    --primary-color:  #50459b;
-    --hover-color:  #887ecb;
+    --primary-color:  #887ecb;
+    --hover-color:  #50459b;
 }
